{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Arrow_Fuse_UI",
            "id": "36eb042b-4b11-44d0-b222-9e68e0872973",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "220b753f-6ef9-4f44-96d4-a68fdec0e98d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sort",
                    "type": "Button",
                    "id": "e4e789d0-f146-4b5e-ba69-07b4492b3e49",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Search",
                    "type": "Value",
                    "id": "f853cdc2-eff5-4efb-8d85-cfe7ceedd785",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "PressAndRepeat(repeatTime=0.15,press=true)",
                    "initialStateCheck": true
                },
                {
                    "name": "FavoriteToggle",
                    "type": "Button",
                    "id": "54240df8-5219-4733-b9c2-2cdf6894d40a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuSearch",
                    "type": "Value",
                    "id": "45ca94e4-7f2a-4202-9e04-d0d14b18709c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SubMenuSearch",
                    "type": "Value",
                    "id": "9343201d-b4fd-46a0-8ad6-f52b840f3567",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21e3bc82-afb3-4025-ab25-ed8558cf5239",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2054b196-ebea-4c8c-be54-649204da6ce0",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "FavoriteToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9363ac1-383e-42d3-9187-22a859c5f0a7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Sort",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "0d80c2d3-559c-4bb5-9694-315438eabc17",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Search",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b8cc8fae-14c6-45de-be91-4fb09fd73df8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Search",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9746971d-773c-410e-8e8e-902564ee339c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Search",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "5c7a691a-e47c-477a-aa78-89310313f80c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuSearch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a3dabe50-d713-4cea-b38f-697e4cea8274",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MenuSearch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b2ccd703-cc85-4d60-b394-773f3740787f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MenuSearch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "68a71c69-d260-40a7-b40e-09dac8dd6695",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SubMenuSearch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b5a7f519-45a5-446d-8f76-fce1ecece2b7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "SubMenuSearch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0cdf8c0a-29af-41bd-bfe0-7a668e83e66a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "SubMenuSearch",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerAction",
            "id": "79f7b3ec-07fc-4d66-a0f2-ed0b4267d760",
            "actions": [
                {
                    "name": "Option1",
                    "type": "Button",
                    "id": "b258818d-f7bb-46bb-be33-34877b06ea46",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Option2",
                    "type": "Button",
                    "id": "618a21e2-a2bc-4ef0-99de-543e0d0fcf1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13084dc9-f609-4f4c-a4ab-74d0ed1fefbd",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Option1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e195c1c4-14f0-4a8b-833b-c5ee756c8e40",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Option2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}